WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293954
REGRESSION(GStreamer 1.26.2): Critical warnings in MediaRecorder
https://bugs.webkit.org/show_bug.cgi?id=293954
Summary
REGRESSION(GStreamer 1.26.2): Critical warnings in MediaRecorder
Philippe Normand
Reported
2025-06-03 06:33:43 PDT
Some WIP patch in
https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/9167
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-06-03 07:06:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46253
EWS
Comment 2
2025-06-03 07:17:18 PDT
Committed
295744@main
(4f13b96103b6): <
https://commits.webkit.org/295744@main
> Reviewed commits have been landed. Closing PR #46253 and removing active labels.
Philippe Normand
Comment 3
2025-06-03 07:18:06 PDT
This needs a patch.
Radar WebKit Bug Importer
Comment 4
2025-06-03 07:18:12 PDT
<
rdar://problem/152499032
>
Philippe Normand
Comment 5
2025-06-04 03:16:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46313
EWS
Comment 6
2025-06-06 07:53:41 PDT
Committed
295915@main
(7c88eea5c5aa): <
https://commits.webkit.org/295915@main
> Reviewed commits have been landed. Closing PR #46313 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug