REGRESSION(GStreamer 1.26.2): Critical warnings in MediaRecorder https://bugs.webkit.org/show_bug.cgi?id=293954 <rdar://problem/152499032>

Reviewed by Xabier Rodriguez-Calvar.

The profile reference passed to gst_encoding_container_profile_add_profile() is transfer-full. While
not stricly needed this patch also adds GRefPtr template specialization for
GstEncodingContainerProfile.

Canonical link: https://commits.webkit.org/295915@main