Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.cpp
@@ -767,6 +767,28 @@ void derefGPtr<GstEncodingProfile>(GstEncodingProfile* ptr)
         gst_encoding_profile_unref(ptr);
 }
 
+template<>
+GRefPtr<GstEncodingContainerProfile> adoptGRef(GstEncodingContainerProfile* ptr)
+{
+    return GRefPtr<GstEncodingContainerProfile>(ptr, GRefPtrAdopt);
+}
+
+template<>
+GstEncodingContainerProfile* refGPtr<GstEncodingContainerProfile>(GstEncodingContainerProfile* ptr)
+{
+    if (ptr)
+        g_object_ref(ptr);
+
+    return ptr;
+}
+
+template<>
+void derefGPtr<GstEncodingContainerProfile>(GstEncodingContainerProfile* ptr)
+{
+    if (ptr)
+        g_object_unref(ptr);
+}
+
 #if USE(GSTREAMER_WEBRTC)
 
 template <> GRefPtr<GstWebRTCRTPReceiver> adoptGRef(GstWebRTCRTPReceiver* ptr)
